# witme

./: .gitignore  Cargo.toml  README.md  package.json
.github/workflows/: release.yml
crates/gen-json-near/: Cargo.toml
crates/gen-json-near/src/: lib.rs
crates/gen-ts-near/: Cargo.toml
crates/gen-ts-near/src/: gen.rs  lib.rs
crates/near-sdk/: Cargo.toml
crates/near-sdk/src/: lib.rs  main.rs
crates/near-sdk/src/core_impl/: mod.rs
crates/near-sdk/src/core_impl/code_generator/: attr_sig_info.rs  impl_item_method_info.rs  item_impl_info.rs  trait_item_method_info.rs
crates/near-sdk/src/core_impl/info_extractor/: attr_sig_info.rs  impl_item_method_info.rs  item_impl_info.rs  item_trait_info.rs  mod.rs  serializer_attr.rs  trait_item_method_info.rs
examples/: gen_all.sh
examples/counter/: Cargo.toml  index.schema.json  index.wit  schema.json
examples/counter/src/: lib.rs
examples/counter/ts/: index.ts  types.ts
examples/rust-status-message/: Cargo.toml  index.json  index.schema.json  index.wit  tsconfig.json
examples/rust-status-message-advanced/: index.schema.json  index.wit
examples/rust-status-message-advanced/src/: lib.rs  views.rs
examples/rust-status-message-advanced/ts/: index.ts  types.ts
examples/rust-status-message/src/: lib.rs
examples/rust-status-message/ts/: helper.ts  index.ts  types.ts
examples/simple/: Cargo.toml  index.schema.json  index.ts  index.wit  tsconfig.json  witgen.wit
examples/simple/src/: lib.rs
examples/simple/ts/: index.ts  types.ts
near-sdk/: sdk.wit  standards.wit
npm/: package.json
npm/__tests__/: path.test.ts  test.ts
npm/src/: getBinary.ts  utils.ts
src/: app.rs  embeded.rs  lib.rs  main.rs  near.rs  opt.rs  util.rs
src/args/: extract.rs  inject.rs  json.rs  mod.rs  ts.rs  wit.rs
src/near-sdk/: sdk.wit  standards.wit
tests/: wit.rs
