[package]
authors = ["Willem Wyndham <willem@ahalabs.dev>"]
description = "Tools for generating to and from wit format"
edition = "2021"
keywords = ["WebAssembly", "Wasm", "wit", "WasmInterfaceTypes"]
license = "MIT"
name = "witme"
repository = "https://github.com/ahalabs/witme"
version = "0.2.4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
clap = {version = "=3.1.8", features = ["derive", "cargo"]}
wit-bindgen-gen-ts-near = {path = "crates/gen-ts-near", version = "0.2.1"}
cargo-witgen = {path = "../witgen/crates/cargo_witgen"}
# cargo-witgen = { git = "https://github.com/ahalabs/witgen", rev = "b17d42c22ec8ea4b10bec7ad72cf1e186fbfd430cd" }
# witgen_macro_helper = {path = "../witgen/crates/witgen_macro_helper"}
# witgen_macro_helper = { git = "https://github.com/ahalabs/witgen", rev = "bcd8dc1c57efb39e90683ac13aec5df843404abd" }
proc-macro2 = { version = "1.0.32", features = ["span-locations"] }
quote = "1.0.10"
syn = { version = "1.0.82", features = ["full", "extra-traits"] }
syn-file-expand = "0.1.1"
near-sdk-wit = {path="./crates/near-sdk"}

[dev-dependencies]
assert_cmd = "2.0.4"
assert_fs = "1.0.7"
predicates = {version = "2.1.1", features = ["regex"]}
wit-parser = { version = '0.0.2', package = "aha-wit-parser"}

[workspace]
members = ["examples/*", "crates/*"]

[lib]
name = "witme"
path = "src/lib.rs"

[[bin]]
name = "witme"
path = "src/main.rs"