[package]
authors = ["Willem Wyndham <willem@ahalabs.dev>"]
description = "Tools for generating to and from wit format"
edition = "2021"
keywords = ["WebAssembly", "Wasm", "wit", "WasmInterfaceTypes"]
license = "MIT"
name = "witme"
repository = "https://github.com/ahalabs/witme"
version = "0.3.1"

[dependencies]
## local
near-sdk-witgen = {path = "./crates/near-sdk", version = "0.0.2"}
wit-bindgen-gen-ts-near = {path = "crates/gen-ts-near", version = "0.3.0"}
wit-bindgen-gen-json-schema = { git = "https://github.com/ahalabs/wit-bindgen", branch = "feat/json-schema"}

## wasm/wit related
cargo-witgen = "0.15.0"
walrus = "0.19.0"

## Errors
anyhow = "1.0.51"

## CLI
clap = {version = "=3.2", features = ["derive", "cargo"]}

[dev-dependencies]
assert_cmd = "2.0.4"
assert_fs = "1.0.7"
predicates = {version = "2.1.1", features = ["regex"]}
wit-parser = {version = '0.0.2', package = "aha-wit-parser"}

[workspace]
members = ["examples/*", "crates/*"]

[lib]
name = "witme"
path = "src/lib.rs"

[[bin]]
name = "witme"
path = "src/bin/main.rs"
