[package]
authors = ["Willem Wyndham <willem@ahalabs.dev>"]
edition = "2018"
license = "Apache-2.0"
name = "near-sdk-wit"
publish = false
repository = "https://github.com/ahalabs/witme"
version = "0.1.0"

[dev-dependencies]
near-sdk = { git = "https://github.com/ahalabs/near-sdk-rs", tag = "v4.0.0-3" }
near-contract-standards = { git = "https://github.com/ahalabs/near-sdk-rs", tag = "v4.0.0-3" }
