[package]
authors = ["Willem Wyndham <willem@ahalabs.dev>"]
description = "Macros needed to generate wit for near rust sdk"
edition = "2021"
license = "Apache-2.0"
name = "near-sdk-witgen"
repository = "https://github.com/ahalabs/witme"
version = "0.0.2"

[dependencies]
proc-macro2 = { version = "1.0.32", features = ["span-locations"] }
quote = "1.0.10"
syn = { version = "1.0.82", features = ["full", "extra-traits", "visit"] }
anyhow = "1.0.51"


[dev-dependencies]
near-sdk = { git = "https://github.com/ahalabs/near-sdk-rs", tag = "v4.0.0-4" }
near-contract-standards = { git = "https://github.com/ahalabs/near-sdk-rs", tag = "v4.0.0-4" }
